# IMP-3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ApplicationUI/: CMakeLists.txt  MainUtilities.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MenuStackedWidget.cpp  MenuStackedWidget.hpp  Resources.qrc  ScrollButton.cpp  ScrollButton.hpp  ShortcutButton.cpp  ShortcutButton.hpp  ViewportManager.cpp  ViewportManager.hpp  ViewportRenderWindow.cpp  ViewportRenderWindow.hpp  ViewportWidget.cpp  ViewportWidget.hpp  ViewportWidget.ui  VkDebugNames.hpp  VulkanBackend.cpp  VulkanBackend.hpp  main.cpp
ApplicationUI/SubWindows/: CreateLightDialog.cpp  CreateLightDialog.hpp  CreateLightDialog.ui  LightingSettingsDialog.cpp  LightingSettingsDialog.hpp  LightingSettingsDialog.ui  LightsEditorDialog.cpp  LightsEditorDialog.hpp  LightsEditorDialog.ui  LoadTextureDialog.cpp  LoadTextureDialog.hpp  LoadTextureDialog.ui  MaterialAssignDialog.cpp  MaterialAssignDialog.hpp  MaterialAssignDialog.ui  MaterialEditorDialog.cpp  MaterialEditorDialog.hpp  MaterialEditorDialog.ui  PropertyItem.hpp  PropertyWindow.cpp  PropertyWindow.hpp  PropertyWindow.ui  SceneStatsDialog.cpp  SceneStatsDialog.hpp  SceneStatsDialog.ui  SubWindowBase.hpp  SubWindowManager.hpp  TextureEditorDialog.cpp  TextureEditorDialog.hpp  TextureEditorDialog.ui
ApplicationUI/styles/: main.qss
CoreLib/: CMakeLists.txt
CoreLib/Core/include/: Config.hpp  Core.hpp  CoreDocument.hpp  CoreTypes.hpp  Viewport.hpp  VulkanContext.hpp
CoreLib/Core/src/: Config.cpp  Core.cpp  CoreDocument.cpp  Viewport.cpp
CoreLib/Modifiers/: Command.hpp  Property.hpp  Tool.cpp  Tool.hpp
CoreLib/Modifiers/Commands/: CmdCenter.cpp  CmdCenter.hpp  CmdConnect.cpp  CmdConnect.hpp  CmdCreatePoly.cpp  CmdCreatePoly.hpp  CmdDelete.cpp  CmdDelete.hpp  CmdDissolveEdge.cpp  CmdDissolveEdge.hpp  CmdDivide.cpp  CmdDivide.hpp  CmdDuplicatePolys.cpp  CmdDuplicatePolys.hpp  CmdDuplicatePolysToObject.cpp  CmdDuplicatePolysToObject.hpp  CmdFitView.cpp  CmdFitView.hpp  CmdFlattenNormals.cpp  CmdFlattenNormals.hpp  CmdFlipNormals.cpp  CmdFlipNormals.hpp  CmdFreeze.cpp  CmdFreeze.hpp  CmdMergeByDistance.cpp  CmdMergeByDistance.hpp  CmdRestOnGround.cpp  CmdRestOnGround.hpp  CmdReverseWinding.cpp  CmdReverseWinding.hpp  CmdSelect.cpp  CmdSelect.hpp  CmdSelectConnected.cpp  CmdSelectConnected.hpp  CmdSmoothNormals.cpp  CmdSmoothNormals.hpp  CmdTriangulate.cpp  CmdTriangulate.hpp
CoreLib/Modifiers/Ops/: Bevel.cpp  Bevel.hpp  Primitives.cpp  Primitives.hpp
CoreLib/Modifiers/Tools/: BendTool.cpp  BendTool.hpp  BevelTool.cpp  BevelTool.hpp  BoxTool.cpp  BoxTool.hpp  CylinderTool.cpp  CylinderTool.hpp  DuplicateTool.cpp  DuplicateTool.hpp  ExtrudeTool.cpp  ExtrudeTool.hpp  InsetTool.cpp  InsetTool.hpp  MockTool.cpp  MockTool.hpp  MoveTool.cpp  MoveTool.hpp  PlaneTool.cpp  PlaneTool.hpp  RotateTool.cpp  RotateTool.hpp  ScaleTool.cpp  ScaleTool.hpp  SelectTool.cpp  SelectTool.hpp  SphereTool.cpp  SphereTool.hpp  StretchTool.cpp  StretchTool.hpp  TreeGeneratorTool.cpp  TreeGeneratorTool.hpp
CoreLib/Overlays/: Overlay.cpp  Overlay.hpp  OverlayHandler.cpp  OverlayHandler.hpp  OverlayHandler2.hpp
CoreLib/Overlays/ToolSizers/: BoxSizer.cpp  BoxSizer.hpp  CylinderGizmo.cpp  CylinderGizmo.hpp  ExtentsGizmo.cpp  ExtentsGizmo.hpp  Handle.hpp  MoveHandle.cpp  MoveHandle.hpp  NormalPullGizmo.cpp  NormalPullGizmo.hpp  PlaneGizmo.cpp  PlaneGizmo.hpp  PrimitiveGizmo.cpp  PrimitiveGizmo.hpp  RadiusHandle.cpp  RadiusHandle.hpp  RadiusHandle2D.cpp  RadiusHandle2D.hpp  RadiusSizer.cpp  RadiusSizer.hpp  RadiusSizer2D.cpp  RadiusSizer2D.hpp  RotateGizmo.cpp  RotateGizmo.hpp  ScaleGizmo.cpp  ScaleGizmo.hpp  SizeHandle.cpp  SizeHandle.hpp  SphereGizmo.cpp  SphereGizmo.hpp  StretchGizmo.cpp  StretchGizmo.hpp  TranslateGizmo.cpp  TranslateGizmo.hpp
CoreLib/Render/: Renderer.cpp  Renderer.hpp
CoreLib/Render/GpuResources/: GpuLight.hpp  GpuLights.cpp  GpuLights.hpp  GpuMaterial.cpp  GpuMaterial.hpp  GpuResources.hpp  MeshGpuResources.cpp  MeshGpuResources.hpp  TextureHandler.cpp  TextureHandler.hpp
CoreLib/Render/Helpers/: DeferredAsDestroy.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  GpuBuffer.cpp  GpuBuffer.hpp  GraphicsPipelines.cpp  GraphicsPipelines.hpp  GridRendererVK.cpp  GridRendererVK.hpp  RenderGeometry.cpp  RenderGeometry.hpp  RtOutputImage.cpp  RtOutputImage.hpp  RtPipeline.cpp  RtPipeline.hpp  RtPresentPipeline.cpp  RtPresentPipeline.hpp  RtSbt.cpp  RtSbt.hpp  ShaderStage.cpp  ShaderStage.hpp  VkPipelineHelpers.cpp  VkPipelineHelpers.hpp  VkRtAccel.cpp  VkRtAccel.hpp  VkRtUtils.hpp  VkTextureUtilities.cpp  VkTextureUtilities.hpp  VkUtilities.cpp  VkUtilities.hpp  VulkanImage.cpp  VulkanImage.hpp
CoreLib/Render/RayTracing/: RtDenoiser.cpp  RtDenoiser.hpp  RtRenderer.cpp  RtRenderer.hpp
CoreLib/Render/Settings/: LightingSettings.hpp  OverlaySettings.hpp  RayTracingSettings.hpp  RenderSettings.hpp
CoreLib/Render/Shaders/: FullscreenTri.vert  Grid.frag  Grid.vert  Line.frag  Line.vert  Overlay.frag  Overlay.geom  Overlay.vert  OverlayFill.frag  (+24 more)
CoreLib/Scene/: Image.cpp  Image.hpp  ImageHandler.hpp  Material.hpp  MaterialEditor.cpp  MaterialEditor.hpp  MaterialHandler.cpp  MaterialHandler.hpp  Scene.cpp  Scene.hpp  SceneMesh.cpp  SceneMesh.hpp  SceneObject.hpp  SceneQuery.hpp  SceneQueryCpu.hpp  SceneQueryEmbree.hpp  SceneSnap.hpp
CoreLib/SceneIO/: SceneFormat.hpp
CoreLib/Utilities/: AutoWelder.hpp  CoreUtilities.cpp  CoreUtilities.hpp  ItemFactory.hpp  MeshUtilities.cpp  MeshUtilities.hpp  PathUtilities.hpp  SelectionUtils.cpp  SelectionUtils.hpp
MeshLib/: CMakeLists.txt
MeshLib/include/: EdgeSet.hpp  HalfEdgeView.hpp  HeMesh.hpp  HeMeshBridge.hpp  History.hpp  HoleList.hpp  SmallList.hpp  SysCounter.hpp  SysMesh.hpp  SysMeshScene.hpp  SysMeshUtils.hpp  SysObjLoader.hpp
MeshLib/src/: HalfEdgeView.cpp  HeMesh.cpp  HeMeshBridge.cpp  History.cpp  SysCounter.cpp  SysHistoryActions.hpp  SysMesh.cpp  SysMeshData.hpp  SysMeshScene.cpp  SysMeshUtils.cpp  SysObjLoader.cpp
(+39 files in other folders)
